After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762504 - Don't use a WARNING when we fail to create a GdkPixbufLoader for a specific MIME type
Don't use a WARNING when we fail to create a GdkPixbufLoader for a specific M...
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: Thumbnail
3.19.x
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-23 01:12 UTC by Debarshi Ray
Modified: 2016-02-23 14:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
thumbnail: Demote a log message from WARNING to DEBUG (1.65 KB, patch)
2016-02-23 01:13 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-02-23 01:12:20 UTC
Failure to create a GdkPixbufLoader for a specific MIME type doesn't necessarily indicate an error. It is possible that the fallback code would still be able to parse the image data. For example, Canon CR2 RAW files have the MIME type image/x-canon-cr2. While we don't have a loader for that specific MIME type, the TIFF loader can still parse the data.                                                                   
                                                                        
In case the fallback code failed to parse the image data, we get a WARNING anyway:
  GnomeDesktop-WARNING **: Error creating thumbnail for ...             
                                                                        
Having a log message to indicate that we are using the fallback code is useful for debugging, but there is no need for the WARNING. It can be extra noise and needlessly interferes with things like G_DEBUG=fatal-warnings.
Comment 1 Debarshi Ray 2016-02-23 01:13:47 UTC
Created attachment 321909 [details] [review]
thumbnail: Demote a log message from WARNING to DEBUG
Comment 2 Bastien Nocera 2016-02-23 14:40:49 UTC
Review of attachment 321909 [details] [review]:

Sure.
Comment 3 Debarshi Ray 2016-02-23 14:48:33 UTC
Comment on attachment 321909 [details] [review]
thumbnail: Demote a log message from WARNING to DEBUG

Thanks for the review, Bastien. Pushed to master.